--- a/interface.css
+++ b/interface.css
@@ -2,11 +2,11 @@
 #buttonSmall {
   border-radius:25px;
   border:solid black 2px;
-  background-color:#20B2AA;
+  background-color:blue;
 }
 #buttonSmall:hover {
   border-color:red;
-  background-color:#20B2AA;
+  background-color:blue;
 }
 #kspImg {
   width:355px;
