--- a/interface.css
+++ b/interface.css
@@ -1,12 +1,10 @@
-
-#buttonSmall {
-  border-radius:25px;
-  border:solid black 2px;
-  background-color:blue;
+button {
+  color: #4169E1;
+  border:2px solid black;
+  background-color:#4169E1;
 }
-#buttonSmall:hover {
+button:hover {
   border-color:red;
-  background-color:blue;
 }
 #kspImg {
   width:355px;
