--- a/interface.css
+++ b/interface.css
@@ -2,6 +2,7 @@ button {
   color: #4169E1;
   border:2px solid black;
   background-color:#4169E1;
+  text: black
 }
 button:hover {
   border-color:red;
