--- a/interface.css
+++ b/interface.css
@@ -1,8 +1,7 @@
 button {
   color: #4169E1;
   border:2px solid black;
-  background-color:#4169E1;
-  text: black
+  background-color:#4169E1 transparent;
 }
 button:hover {
   border-color:red;
