--- a/interface.css
+++ b/interface.css
@@ -31,10 +31,10 @@ button:hover {
 #testButton {
   color:orange;
   font-weight:bold;
-  font-family:cursive;
+  font-family:Cursive;
 }
 #testButton2 {
   color:orange;
   font-weight:bold;
-  font-family:cursive;
+  font-family:Cursive;
 }
