--- a/interface.css
+++ b/interface.css
@@ -13,8 +13,8 @@ button:hover {
   border:2px solid blue;
   border-radius:5px;
   padding:0px;
-  margin:auto;
-  
+  margin-left: auto;
+  margin-right: auto;
 }
 #kspImg:hover {
   border-color:red;
