--- a/interface.css
+++ b/interface.css
@@ -14,7 +14,7 @@ button:hover {
   border-radius:5px;
   padding:0px;
 }
-#kspImg: displayed {
+#displayed {
   display:block;
   margin-left:auto;
   margin-right:auto;
