--- a/interface.css
+++ b/interface.css
@@ -43,6 +43,11 @@ button:hover {
   font-weight:bold;
   font-family:Cursive;
 }
+#testButton3 {
+  color:orange;
+  font-weight:bold;
+  font-family:Cursive;
+}
 #moneyBox {
   background-color:orange;
   font-weight:bold;
