--- a/interface.css
+++ b/interface.css
@@ -57,6 +57,7 @@ button:hover {
   color:orange;
   font-weight:bold;
   font-family:Cursive;
+  padding:5px 5px 5px 5px;
 }
 #moneyBox {
   background-color:orange;
